src/include/c_api.h

/// Build render model for one editor frame
/// @param out_size Output: payload byte length (bytes, excluding extra '\0' terminator)
/// @return EditorRenderModel binary data; payload uses native byte order, and all supported platforms are currently LE.
///         Top-level layout:
///         1. f32 split_x
///         2. i32 split_line_visible (0=false, 1=true)
///         3. f32 scroll_x
///         4. f32 scroll_y
///         5. f32 viewport_width
///         6. f32 viewport_height
///         7. PointF current_line
///            - f32 x
///            - f32 y
///         8. i32 current_line_render_mode (0=BACKGROUND, 1=BORDER, 2=NONE)
///         9. i32 lines_count
///         10. VisualLine[lines_count] lines
///            VisualLine layout:
///            - i32 logical_line
///            - i32 wrap_index
///            - PointF line_number_position
///            - i32 is_phantom_line
///            - i32 fold_state
///            - i32 run_count
///            - VisualRun[run_count] runs
///            VisualRun layout:
///            - i32 type
///            - f32 x
///            - f32 y
///            - i32 text_utf8_length
///            - u8[text_utf8_length] text_utf8_bytes
///            - TextStyle style
///              - i32 color
///              - i32 background_color
///              - i32 font_style
///            - i32 icon_id
///            - i32 color_value
///            - f32 width
///            - f32 padding
///            - f32 margin
///         11. i32 gutter_icon_render_count
///         12. GutterIconRenderItem[gutter_icon_render_count] gutter_icons
///             GutterIconRenderItem layout:
///             - i32 logical_line
///             - i32 icon_id
///             - PointF origin
///             - f32 width
///             - f32 height
///         13. i32 fold_marker_render_count
///         14. FoldMarkerRenderItem[fold_marker_render_count] fold_markers
///             FoldMarkerRenderItem layout:
///             - i32 logical_line
///             - i32 fold_state
///             - PointF origin
///             - f32 width
///             - f32 height
///         15. Cursor cursor
///            - TextPosition text_position
///              - i32 line
///              - i32 column
///            - PointF position
///            - f32 height
///            - i32 visible
///            - i32 show_dragger
///         16. i32 selection_rect_count
///         17. Rect[selection_rect_count] selection_rects
///             Rect layout:
///             - PointF origin
///             - f32 width
///             - f32 height
///         18. SelectionHandle selection_start_handle
///         19. SelectionHandle selection_end_handle
///             SelectionHandle layout:
///             - PointF position
///             - f32 height
///             - i32 visible
///         20. CompositionDecoration composition_decoration
///             - i32 active
///             - PointF origin
///             - f32 width
///             - f32 height
///         21. i32 guide_segment_count
///         22. GuideSegment[guide_segment_count] guide_segments
///             GuideSegment layout:
///             - i32 direction
///             - i32 type
///             - i32 style
///             - PointF start
///             - PointF end
///             - i32 arrow_end
///         23. i32 diagnostic_count
///         24. DiagnosticDecoration[diagnostic_count] diagnostic_decorations
///             DiagnosticDecoration layout:
///             - PointF origin
///             - f32 width
///             - f32 height
///             - i32 severity
///             - i32 color
///         25. i32 max_gutter_icons
///         26. i32 linked_editing_rect_count
///         27. LinkedEditingRect[linked_editing_rect_count] linked_editing_rects
///             LinkedEditingRect layout:
///             - PointF origin
///             - f32 width
///             - f32 height
///             - i32 is_active
///         28. i32 bracket_highlight_rect_count
///         29. Rect[bracket_highlight_rect_count] bracket_highlight_rects
///             Rect layout:
///             - PointF origin
///             - f32 width
///             - f32 height
///         30. (optional append-only tail) ScrollbarModel vertical_scrollbar
///         31. (optional append-only tail) ScrollbarModel horizontal_scrollbar
///             ScrollbarModel layout:
///             - i32 visible
///             - f32 alpha (0~1)
///             - Rect track
///             - Rect thumb
///             Rect layout:
///             - PointF origin
///             - f32 width
///             - f32 height
///         32. i32 gutter_sticky (0=scrolls with content, 1=fixed)
///         Call free_binary_data after use; returns NULL on failure
EDITOR_API const uint8_t* build_editor_render_model(intptr_t editor_handle, size_t* out_size);
/// Get editor layout metrics
/// @param out_size Output: payload byte length (bytes, excluding extra '\0' terminator)
/// @return LayoutMetrics binary data; payload uses native byte order, and all supported platforms are currently LE.
///         Top-level layout:
///         1. f32 font_height
///         2. f32 font_ascent
///         3. f32 line_spacing_add
///         4. f32 line_spacing_mult
///         5. f32 line_number_margin
///         6. f32 line_number_width
///         7. i32 max_gutter_icons
///         8. f32 inlay_hint_padding
///         9. f32 inlay_hint_margin
///         10. i32 fold_arrow_mode (0=AUTO, 1=ALWAYS, 2=HIDDEN)
///         11. i32 has_fold_regions (0=false, 1=true)
///         Call free_binary_data after use; returns NULL on failure
EDITOR_API const uint8_t* get_layout_metrics(intptr_t editor_handle, size_t* out_size);
/// GestureResult binary return layout (payload uses native byte order; all supported platforms are currently LE):
/// 1. i32 gesture_type
/// 2. Only when gesture_type is TAP / DOUBLE_TAP / LONG_PRESS / DRAG_SELECT / CONTEXT_MENU, append:
///    f32 tap_x, f32 tap_y
/// 3. Always append editor state:
///    i32 cursor_line
///    i32 cursor_column
///    i32 has_selection
///    i32 selection_start_line
///    i32 selection_start_column
///    i32 selection_end_line
///    i32 selection_end_column
///    f32 view_scroll_x
///    f32 view_scroll_y
///    f32 view_scale
///    i32 hit_target_type
///    i32 hit_target_line
///    i32 hit_target_column
///    i32 hit_target_icon_id
///    i32 hit_target_color_value
///    i32 needs_edge_scroll (1 = platform should start/continue 16ms timer calling
///        editor_tick_edge_scroll; 0 = platform should stop the timer)
///    i32 needs_fling (1 = platform should start/continue per-frame callback calling
///        editor_tick_fling; 0 = platform should stop the callback)
///    i32 needs_animation (1 = any animation still active; platform can use a single
///        frame callback calling editor_tick_animations instead of separate tick calls)
///
/// Handle gesture event
/// @param type Event type
/// @param pointer_count Finger point count
/// @param points Data for each point
/// @return GestureResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* handle_editor_gesture_event(intptr_t editor_handle, uint8_t type, uint8_t pointer_count, float* points, size_t* out_size);
/// Handle gesture event(extended version, supports modifier keys and wheel/scale parameters)
/// @param type Event type
/// @param pointer_count Finger point count
/// @param points Data for each point
/// @param modifiers Modifier key flags(SHIFT=1, CTRL=2, ALT=4, META=8)
/// @param wheel_delta_x Horizontal wheel delta (used for MOUSE_WHEEL/DIRECT_SCROLL)
/// @param wheel_delta_y Vertical wheel delta (used for MOUSE_WHEEL/DIRECT_SCROLL)
/// @param direct_scale Direct scale value (used for DIRECT_SCALE)
/// @return GestureResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* handle_editor_gesture_event_ex(intptr_t editor_handle, uint8_t type, uint8_t pointer_count, float* points,
    uint8_t modifiers, float wheel_delta_x, float wheel_delta_y, float direct_scale, size_t* out_size);
/// Tick edge-scroll during drag selection / handle drag.
/// Call at ~16ms intervals while the previous GestureResult.needs_edge_scroll was true.
/// Returns the same GestureResult binary layout as handle_editor_gesture_event.
/// When needs_edge_scroll becomes false in the returned payload, stop the timer.
/// @return GestureResult binary payload
EDITOR_API const uint8_t* editor_tick_edge_scroll(intptr_t editor_handle, size_t* out_size);
/// Tick fling (inertial scroll) animation.
/// Call each frame while the previous GestureResult.needs_fling was true.
/// The core tracks real elapsed time internally; any frame interval is fine.
/// Returns the same GestureResult binary layout as handle_editor_gesture_event.
/// When needs_fling becomes false in the returned payload, stop the timer.
/// @return GestureResult binary payload
EDITOR_API const uint8_t* editor_tick_fling(intptr_t editor_handle, size_t* out_size);
/// Unified animation tick: advances all active animations (edge-scroll, fling).
/// Platform can use a single frame callback driven by needs_animation and call this
/// instead of editor_tick_edge_scroll() / editor_tick_fling() separately.
/// Returns the same GestureResult binary layout as handle_editor_gesture_event.
/// When needs_animation becomes false in the returned payload, stop the callback.
/// @return GestureResult binary payload
EDITOR_API const uint8_t* editor_tick_animations(intptr_t editor_handle, size_t* out_size);
/// KeyEventResult binary return layout (payload uses native byte order; all supported platforms are currently LE):
/// 1. i32 handled
/// 2. i32 content_changed
/// 3. i32 cursor_changed
/// 4. i32 selection_changed
/// 5. i32 has_edit
/// 6. If has_edit != 0, append a TextEditResult.changes array:
///    i32 change_count
///    Repeat for change_count groups:
///    i32 range_start_line
///    i32 range_start_column
///    i32 range_end_line
///    i32 range_end_column
///    i32 new_text_len
///    u8[new_text_len] new_text_utf8
///
/// Handle keyboard event (optional default key mapping; platform layer can bypass this API and call atomic operation APIs directly)
/// @param key_code Key code (KeyCode enum value)
/// @param text Input text (UTF8; pass for normal character input, pass NULL for special keys)
/// @param modifiers Modifier key flags(SHIFT=1, CTRL=2, ALT=4, META=8)
/// @return KeyEventResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* handle_editor_key_event(intptr_t editor_handle, uint16_t key_code, const char* text, uint8_t modifiers, size_t* out_size);
/// TextEditResult binary return layout (payload uses native byte order; all supported platforms are currently LE):
/// 1. i32 changed
/// 2. When changed != 0, append change array:
///    i32 change_count
///    Repeat for change_count groups:
///    i32 range_start_line
///    i32 range_start_column
///    i32 range_end_line
///    i32 range_end_column
///    i32 new_text_len
///    u8[new_text_len] new_text_utf8
///
/// Insert text at cursor position (replace selected text if selection exists)
/// @param text UTF8 text to insert
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_insert_text(intptr_t editor_handle, const char* text, size_t* out_size);
/// Free binary memory returned by C++ side
/// Applies to all APIs that return const uint8_t* + out_size.
/// Platform must call once after reading payload; NULL/0 can be safely ignored.
/// @param data_ptr Start address of binary payload
EDITOR_API void free_binary_data(intptr_t data_ptr);